@@ -1,3 +1,6 @@
+2008-05-11 David Barnett <daviebdawg@gmail.com>
+  * [gpasm] Fixed segfault on call w/ no args in PIC18's (bug #1943484)
+
 2008-05-08 David Barnett <daviebdawg@gmail.com>
   * [gpdasm] Improved gpdasm to allow non-word-aligned byte addresses (bug
   #1917597)
